# ml_metamodels

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py  train.dockerfile
.dvc/: config
.github/workflows/: codecheck.yaml  pre_commit.yaml  tests.yaml
configs/: cloudbuild.yaml  config.yaml  gnn_config.yaml  gnn_config_sweep.yaml  hydra_config.yaml  vertex_ai_train.yaml
configs/data/: SiouxFalls24ZonesOD.yaml
configs/inference/: default.yaml
configs/model/: gat.yaml  gcn.yaml  gcn_default.yaml  gcn_sweep.yaml
configs/train/: default.yaml  default_sweep.yaml
configs/wandb/: default.yaml  default_sweep.yaml
data/processed/sioux_falls_simulation_24_zones_OD_10K/: scalers.pkl  test.py
data/processed/sioux_falls_simulation_24_zones_OD_2K/: scalers.pkl  test.py
data/raw/sioux_falls_simulation_24_zones_OD_2K/: test.pickle  val.pickle
dockerfiles/: api.dockerfile  evaluate.dockerfile  fastapi_app.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: GCN_2025-01-10_11-29-28.pt  GCN_2025-01-10_11-32-22.pt
notebooks/: SiouxFalls24Statistics.ipynb
reports/: README.md
results/20250109_184939_sioux_falls_simulation_24_zones_OD_2K/.hydra/: config.yaml  hydra.yaml
results/20250109_184939_sioux_falls_simulation_24_zones_OD_2K/data/: test.pt  val.pt
results/20250109_185146_sioux_falls_simulation_24_zones_OD_2K/.hydra/: config.yaml  hydra.yaml
results/20250109_185146_sioux_falls_simulation_24_zones_OD_2K/models/: model.pth
src/ml_metamodels/: data.py  evaluate.py  gnn_decoders.py  gnn_layers.py  model.py  node_embeddings.py  train.py  train_sweep.py
src/ml_project/: data.py  diffusions.py  evaluate.py  gnn_decoders.py  gnn_layers.py  model.py  node_embeddings.py  train.py
tests/: test_data.py  test_model.py  test_train.py
(+19 files in other folders)
