[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_metamodels"
version = "0.0.1"
description = "The final hand-in for the exam in ml-ops."
authors = [
  { name = "Oskar Lassen", email = "your@email.com" },
  { name = "Francisco Madaleno", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*", "*/_remote_module_non_scriptable.py"]

[project.scripts]
preprocess_data = "ml_metamodels.data:app"
train = "ml_metamodels.train:app"
train_sweep = "ml_metamodels.train:app"
evaluate = "ml_metamodels.evaluate:app"
visualize = "ml_metamodels.visualize:app"
